agent: api: Add operation IDs
