# agent/pkg/api/rest/docs/swagger.json
@@ -25,6 +25,7 @@
                     "[Infra] Get infra info"
                 ],
                 "summary": "Get a list of integrated infra information",
+                "operationId": "get-infra-info",
                 "responses": {
                     "200": {
                         "description": "Successfully get information of the infra.",
@@ -60,6 +61,7 @@
                     "[Kubernetes] Get kubernetes info"
                 ],
                 "summary": "Get a list of integrated kubernetes information",
+                "operationId": "get-kubernetes-info",
                 "responses": {
                     "200": {
                         "description": "Successfully get information of the kubernetes.",
@@ -92,9 +94,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin] System management"
+                    "[Admin]\tSystem management"
                 ],
                 "summary": "Check Ready",
+                "operationId": "health-check-readyz",
                 "responses": {
                     "200": {
                         "description": "Successfully get ready state.",
@@ -124,6 +127,7 @@
                     "[Software] Get software info"
                 ],
                 "summary": "Get a list of software information",
+                "operationId": "get-software-info",
                 "parameters": [
                     {
                         "type": "boolean",
